--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,13 @@ body {
   background: var(--background);
   font-family: var(--font-jetbrains-mono) !important;
 }
+@keyframes hd-quality {
+  0% {
+    filter: blur(20px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
